@@ -4,6 +4,8 @@
  * You should have received a copy of the CC0 legalcode along with this
  * work. If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
  */
+import org.graalvm.buildtools.gradle.tasks.NativeRunTask
+
 plugins {
     id "org.graalvm.internal.tck"
 }
@@ -15,8 +17,26 @@ dependencies {
     testImplementation "org.apache.kafka:kafka-clients:$libraryVersion:test"
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
     testImplementation 'org.assertj:assertj-core:3.22.0'
+    testImplementation 'org.mockito:mockito-core:4.11.0'
     testImplementation 'ch.qos.logback:logback-classic:1.4.5'
+    testImplementation 'org.bouncycastle:bcpkix-jdk18on:1.80'
     testRuntimeOnly 'org.robolectric:android-all:14-robolectric-10818077'
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.release = null
+    options.compilerArgs += ['--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED']
+}
+
+tasks.withType(Test).configureEach {
+    maxHeapSize = "2g"
+    jvmArgs += ['--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED']
+    systemProperty 'java.vendor', 'IBM Corporation'
+}
+
+tasks.named("nativeTest", NativeRunTask).configure {
+    runtimeArgs.add('-Djava.vendor=IBM Corporation')
+    runtimeArgs.add("-Djava.class.path=${sourceSets.test.runtimeClasspath.asPath}")
 }
 
 graalvmNative {
@@ -27,6 +47,12 @@ graalvmNative {
                 userCodeFilterPath = "metadata-user-code-filter.json"
                 extraFilterPath = "metadata-extra-filter.json"
             }
+        }
+    }
+    binaries {
+        all {
+            buildArgs.add('--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED')
+            buildArgs.add('--initialize-at-run-time=org.apache.kafka.common.security.kerberos.KerberosError')
         }
     }
 }
